please help, I need to see the sun again - when release?